// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when MCP config has expired auth tokens > allows skipping when auth is expired > mcp-auth-skipped 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Ready to start?                                                      Todo (5/6)

 The wizard will:                                                     ● Check your system
 ✔ add the Confidence SDK                                             ● Sign in to Confidence
 ✔ create your first feature flag                                     ● Set up your AI agent
                                                                      ● Connect Confidence tools
 ◆ The AI agent will be able to run commands, install packages, and   ● Choose features
 modify files in your project.                                        ▶ Set up your project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Start onboarding?

 ❯ Start onboarding
   Skip for now

 ↑↓ navigate   enter confirm   esc back                                                      vX.Y.Z"
`;

exports[`when MCP config has expired auth tokens > shows auth-expired status and reconnects successfully > connect-tools-expired 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Connect Confidence tools                                             Todo (3/6)

 Tools give your agent live access to your Confidence workspace and   ● Check your system
 docs via MCP. With them, you'll be able to:                          ● Sign in to Confidence
                                                                      ● Set up your AI agent
 ● Ask your agent to create and manage feature flags.                 ▶ Connect Confidence tools
 ● Search docs and generate code, all from your IDE.                  ○ Choose features
 ● Avoid context-switching or manual lookups. Your assistant has the  ○ Set up your project
    keys.

 Confidence tools:
 ○ confidence-flags (auth expired)
 ○ confidence-docs (auth expired)


 Some tools are already installed but authentication has expired —
 reconnect to refresh.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Reconnect to refresh credentials?

 ❯ Reconnect all tools
   Reconnect confidence-flags
   Reconnect confidence-docs
   Skip for now

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when MCP config has expired auth tokens > shows auth-expired status and reconnects successfully > connect-tools-reconnected 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Connect Confidence tools                                             Todo (4/6)

 Tools give your agent live access to your Confidence workspace and   ● Check your system
 docs via MCP. With them, you'll be able to:                          ● Sign in to Confidence
                                                                      ● Set up your AI agent
 ● Ask your agent to create and manage feature flags.                 ● Connect Confidence tools
 ● Search docs and generate code, all from your IDE.                  ○ Choose features
 ● Avoid context-switching or manual lookups. Your assistant has the  ○ Set up your project
    keys.

 Confidence tools:
 ✔ confidence-flags
 ✔ confidence-docs


 Connected successfully. Continuing..."
`;
